modified first project page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 
 <body>
+	<p>
+		UNDER CONSTRUCTION!
+	</p>
+	
 	<img src="http://www.hunter.cuny.edu/onestop/financial-aid-images-new/fa-working-draft-images/under-construction.png/image_preview"/>
 </body>
